# Mangaguesser-Gobackend

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  app.go  game.go  go.mod  go.sum  handlers.go  manga.go  mangaIDs.csv  models.go  results.csv  utils.go
scripts/: compare_manga.py  find_duplicates.py  main.py  pyproject.toml  requirements.txt  results.csv  results.parquet  start_db.py  top_manga.csv  top_manga_gemini.csv
