[project]
name = "scripts"
version = "0.1.0"
description = "Scripts to scrape the mangas to show on the website"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fuzzywuzzy>=0.18.0",
    "lxml>=6.0.2",
    "polars>=1.34.0",
    "pytest-playwright>=0.7.1",
    "requests>=2.32.5",
]
